syntax = "proto3";
package chord;

message FileInfo {
    string id = 1;          // nodeID - where the file is stored, a.k.a owner of the file
    string filename = 2;    // filename (unique in the Chord ring)
}

message FileChunk {
    bytes content = 1;
}

enum StatusCode {
    Unknown = 0;
    Ok = 1;
    Failed = 2;
}

message UploadStatus {
    string Message = 1;
    StatusCode Code = 2;
}